--- a/client/app/index.html
+++ b/client/app/index.html
@@ -82,9 +82,11 @@
     <script src="components/angular-translate-loader-url/angular-translate-loader-url.js"></script>
     <script src="components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
     <script src="components/jquery-ui/jquery-ui.js"></script>
+    <script src="components/blueimp-load-image/js/load-image.all.min.js"></script>
     <script src="components/jquery-file-upload/js/jquery.iframe-transport.js"></script>
     <script src="components/jquery-file-upload/js/jquery.fileupload.js"></script>
     <script src="components/jquery-file-upload/js/jquery.fileupload-process.js"></script>
+    <script src="components/jquery-file-upload/js/jquery.fileupload-image.js"></script>
     <script src="components/jquery-file-upload/js/jquery.fileupload-validate.js"></script>
     <script src="components/jquery-file-upload/js/jquery.fileupload-angular.js"></script>
     <script src="components/angular-ui-sortable/sortable.js"></script>
